--- a/pych/package.json
+++ b/pych/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
-    "request": "^2.88.2"
+    "node-telegram-bot-api": "^0.50.0",
+    "request": "^2.88.2",
+    "socks5-https-client": "^1.2.1"
   }
 }
